--- a/nginx/vhosts/temp.conf
+++ b/nginx/vhosts/temp.conf
@@ -1,7 +1,7 @@
 server {
 	listen 80;
 	server_name  localhost;
-	root   /data/www-data/temp/www;
+	root   /data/home/qianxun/website/temp/www;
 	index index.shtml index.html index.htm index.php;
 		  
 	ssi on;
@@ -33,6 +33,6 @@ server {
 		expires 1h;
 	}
 	
-	access_log  /data/www-data/temp/log/temp_access.log access_log_format;
+	access_log  /data/home/qianxun/website/temp/log/temp_access.log access_log_format;
 
 }
