--- a/nginx/vhosts/dongfeng.conf
+++ b/nginx/vhosts/dongfeng.conf
@@ -4,8 +4,8 @@ server {
 
     #charset koi8-r;
 
-    access_log  /var/log/nginx/dongfeng.access.log;
-    error_log   /var/log/nginx/dongfeng-error.log; 
+    access_log  logs/dongfeng.access.log;
+    error_log   logs/dongfeng-error.log; 
 
     location / {
         root   /home/qianxun/website/dflpvmkt/;
@@ -27,11 +27,11 @@ server {
     #    proxy_pass   http://127.0.0.1;
     #}
 
-    # pass the PHP scripts to FastCGI server listening on php_server:9000
+    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
         root           /home/qianxun/website/dflpvmkt/;
-        fastcgi_pass   php5_server:9000;
+        fastcgi_pass   127.0.0.1:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         include        fastcgi_params;
