--- a/nginx/vhosts/temp.conf
+++ b/nginx/vhosts/temp.conf
@@ -20,7 +20,7 @@ server {
 	{   
 		fastcgi_pass  127.0.0.1:9000;
 		fastcgi_index index.php;
-		include ./fastcgi/fastcgi.conf;
+		include ./fastcgi.conf;
 	}
 	
 	location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$
@@ -32,7 +32,7 @@ server {
 	{
 		expires 1h;
 	}
-	
-	access_log  /data/home/qianxun/website/temp/log/temp_access.log access_log_format;
+	access_log  logs/temp.access.log;
+    	error_log   logs/temp-error.log;
 
 }
