--- a/nginx/vhosts/ycf_apidoc.conf
+++ b/nginx/vhosts/ycf_apidoc.conf
@@ -4,7 +4,7 @@ server {
 
 	#charset koi8-r;
 
-	access_log  /home/qianxun/website/ycfLog/apidoctest.access.log;
+	access_log  logs/apidoctest.access.log;
 
 	location / {
 		root   /home/qianxun/website/ycf_api_docs;
@@ -26,11 +26,11 @@ server {
 	#    proxy_pass   http://127.0.0.1;
 	#}
 
-	# pass the PHP scripts to FastCGI server listening on php_server:9000
+	# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
 	#
 	location ~ \.php$ {
 	    root           /home/qianxun/website/ycf_api_docs;
-	    fastcgi_pass   php_server:9000;
+	    fastcgi_pass   127.0.0.1:9000;
 	    fastcgi_index  index.php;
 	    fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
 	    include        fastcgi_params;
