--- a/nginx/vhosts/demo.conf
+++ b/nginx/vhosts/demo.conf
@@ -7,8 +7,8 @@ server {
     autoindex on; 
 
     #charset koi8-r;
-    access_log  /var/log/nginx/demo.access.log;
-    error_log   /var/log/nginx/demo-error.log; 
+    access_log  logs/demo.access.log;
+    error_log   logs/demo-error.log; 
 
     location / {
         index  index.php index.html index.htm;
@@ -29,10 +29,10 @@ server {
     #    proxy_pass   http://127.0.0.1;
     #}
 
-    # pass the PHP scripts to FastCGI server listening on php_server:9000
+    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
-        fastcgi_pass   php_server:9000;
+        fastcgi_pass   127.0.0.1:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         include        fastcgi_params;
