--- a/nginx/vhosts/mysqladmin.conf
+++ b/nginx/vhosts/mysqladmin.conf
@@ -8,8 +8,8 @@ server {
     client_max_body_size 20m;
 
     #charset koi8-r;
-    access_log  /var/log/nginx/phpMyAdmin.access.log;
-    error_log   /var/log/nginx/phpMyAdmin-error.log; 
+    access_log  logs/phpMyAdmin.access.log;
+    error_log   logs/phpMyAdmin-error.log; 
 
     location / {
         index  index.php index.html index.htm;
@@ -30,10 +30,10 @@ server {
     #    proxy_pass   http://127.0.0.1;
     #}
 
-    # pass the PHP scripts to FastCGI server listening on php_server:9000
+    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
-        fastcgi_pass   php_server:9000;
+        fastcgi_pass   127.0.0.1:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         include        fastcgi_params;
