--- a/nginx/vhosts/new.conf
+++ b/nginx/vhosts/new.conf
@@ -3,7 +3,7 @@ server {
     server_name  www.new.com localhost;
 
     #charset koi8-r;
-    #access_log  /var/log/nginx/log/host.access.log  main;
+    #access_log  logs/log/host.access.log  main;
 
     location / {
         root   /usr/share/nginx/html;
@@ -25,11 +25,11 @@ server {
     #    proxy_pass   http://127.0.0.1;
     #}
 
-    # pass the PHP scripts to FastCGI server listening on php_server:9000
+    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
         root           /usr/share/nginx/html/;
-        fastcgi_pass   php_server:9000;
+        fastcgi_pass   127.0.0.1:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         include        fastcgi_params;
