--- a/nginx/vhosts/phalconMvc.conf
+++ b/nginx/vhosts/phalconMvc.conf
@@ -4,8 +4,8 @@ server {
     root        /home/qianxun/website/phalconMvc/public/;
     index       index.php index.html index.htm;
 
-    access_log  /home/qianxun/website/ycfLog/phalconMvc-access.log;
-    error_log   /home/qianxun/website/ycfLog/phalconMvc-error.log error;
+    access_log  logs/phalconMvc-access.log;
+    error_log   logs/phalconMvc-error.log error;
 
     location / {
         try_files $uri $uri/ /index.php?_url=$uri&$args;
@@ -14,7 +14,7 @@ server {
     location ~ \.php {
         # try_files   $uri =404;
 
-        fastcgi_pass  php_server:9000;
+        fastcgi_pass  127.0.0.1:9000;
         fastcgi_index /index.php;
 
         include fastcgi_params;
