--- a/nginx/vhosts/tempci.conf
+++ b/nginx/vhosts/tempci.conf
@@ -21,7 +21,7 @@ server {
 			set $real_script_name $1;
 			set $path_info $2;
 	      	}
-		include ./fastcgi/cifastcgi.conf;
+		include ./fastcgi.conf;
 	 }
                 
 	 location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$ {
@@ -31,6 +31,6 @@ server {
 	 location ~ .*\.(js|css)?$ {
 		  expires      1h;
 	 }    
-
-	 access_log  /data/home/qianxun/website/tempci/log/tempci_access.log access_log_format;
+	access_log  logs/tempci.access.log;
+    	error_log   logs/tempci-error.log;
  }
