--- a/nginx/vhosts/ycf_m.conf
+++ b/nginx/vhosts/ycf_m.conf
@@ -5,8 +5,8 @@ server {
 	root /home/qianxun/website/ycf_m; 
 	autoindex on; 
 	
-	access_log  /home/qianxun/website/ycfLog/ycf_m.access.log;
-	error_log	/home/qianxun/website/ycfLog/ycf_m-error.log; 
+	access_log  logs/ycf_m.access.log;
+	error_log	logs/ycf_m-error.log; 
 	#error_page 404 /404.html; 
 
 	# redirect server error pages to the static page /50x.html 
@@ -27,7 +27,7 @@ server {
 		} 
 	}
 	location ~ \.php$ { 
-		fastcgi_pass php_server:9000; 
+		fastcgi_pass 127.0.0.1:9000; 
 		#fastcgi_pass php54_backend; 
 		fastcgi_index index.php; 
 		include fastcgi_params; 
