--- a/nginx/vhosts/ycf_act.conf
+++ b/nginx/vhosts/ycf_act.conf
@@ -1,6 +1,6 @@
 server { 
 	listen 80; 
-	server_name activitytest.yaochufa.com activitytest.yaochufa.com;
+	server_name activitytest.yaochufa.com;
 	index index.html index.htm index.php; 
 	root /home/qianxun/website/ycf_activity; 
 	autoindex on; 
