--- a/nginx/vhosts/ycf_www.conf
+++ b/nginx/vhosts/ycf_www.conf
@@ -1,6 +1,6 @@
 server { 
 	listen 80; 
-	server_name wwwtest.yaochufa.com www.yaochufa.com; 
+	server_name wwwtest.yaochufa.com; 
 	index index.html index.htm index.php; 
 	root /home/qianxun/website/ycf_www; 
 	autoindex on; 
