--- a/nginx/vhosts/laravelcms.conf
+++ b/nginx/vhosts/laravelcms.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  www.laravelcms.com laravelcms.com;
+    server_name  www.laravelcms.com;
 
     index index.html index.htm index.php; 
     root   /home/qianxun/website/laravelCms/public;
