--- a/nginx/vhosts/new.conf
+++ b/nginx/vhosts/new.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  www.new.com localhost;
+    server_name  www.new.com;
 
     #charset koi8-r;
     #access_log  logs/log/host.access.log  main;
