--- a/nginx/vhosts/phalcon.conf
+++ b/nginx/vhosts/phalcon.conf
@@ -1,6 +1,6 @@
 server {
     listen      80;
-    server_name www.phalcontest.com phalcontest.com;
+    server_name www.phalcontest.com;
     root        /home/qianxun/website/phalcontest/public;
     index       index.php index.html index.htm;
 
