--- a/nginx/vhosts/phalconMvc.conf
+++ b/nginx/vhosts/phalconMvc.conf
@@ -1,6 +1,6 @@
 server {
     listen      80;
-    server_name  www.phalconmvc.com phalconmvc.com;
+    server_name  www.phalconmvc.com;
     root        /home/qianxun/website/phalconMvc/public/;
     index       index.php index.html index.htm;
 
