--- a/nginx/vhosts/phalconcms.conf
+++ b/nginx/vhosts/phalconcms.conf
@@ -1,6 +1,6 @@
 server {
     listen      80;
-    server_name  www.phalconcms.com phalconcms.com;
+    server_name  www.phalconcms.com;
     root        /home/qianxun/website/phalconCms/public/;
     index       index.php index.html index.htm;
 
