--- a/nginx/vhosts/ycf_direct_selling.conf
+++ b/nginx/vhosts/ycf_direct_selling.conf
@@ -1,6 +1,6 @@
 server {
     listen      80;
-    server_name  www.directselling.com directselling.com;
+    server_name  www.directselling.com;
     root        /home/qianxun/website/ycf_direct_selling/public/;
     index       index.php index.html index.htm;
 
