--- a/nginx/vhosts/ycf_m.conf
+++ b/nginx/vhosts/ycf_m.conf
@@ -1,6 +1,6 @@
 server { 
 	listen 80; 
-	server_name mtest.yaochufa.com m.yaochufa.com;
+	server_name mtest.yaochufa.com;
 	index index.html index.htm index.php; 
 	root /home/qianxun/website/ycf_m; 
 	autoindex on; 
