--- a/nginx/vhosts/laraveltest.conf
+++ b/nginx/vhosts/laraveltest.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  www.laraveltest.com laraveltest.com;
+    server_name  www.laraveltest.com;
 
     index index.html index.htm index.php; 
     root   /home/qianxun/website/laraveltest/public;
