--- a/nginx/vhosts/ycf_m2.conf
+++ b/nginx/vhosts/ycf_m2.conf
@@ -1,6 +1,6 @@
 server { 
     listen 80; 
-    server_name mtest.yaochufa.com;
+    server_name m2test.yaochufa.com;
     index index.html index.htm index.php; 
     root /home/qianxun/website/m2.yaochufa.com/public/; 
     autoindex on; 
@@ -19,7 +19,7 @@ server {
         root /home/qianxun/website/m2.yaochufa.com/public; 
     } 
     location ~ \.(png|jpg)$ { 
-        error_page 404 /home/qianxun/website/m2.yaochufa.com/public/images/404.jpg; 
+        error_page 404 /home/qianxun/website/m2.yaochufa.com/public/public/images/404.jpg; 
     } 
     location / { 
         if (!-e $request_filename){ 
