--- a/nginx/vhosts/ycf_m2.conf
+++ b/nginx/vhosts/ycf_m2.conf
@@ -1,38 +1,31 @@
-server { 
-    listen 80; 
-    server_name m2test.yaochufa.com;
-    index index.html index.htm index.php; 
-    root /home/qianxun/website/m2.yaochufa.com/public/; 
-    autoindex on; 
-    
-    access_log  logs/ycf_m.access.log;
-    error_log   logs/ycf_m-error.log; 
-    #error_page 404 /404.html; 
+server {
+    listen      80;
+    server_name  m2test.yaochufa.com;
+    root        /home/qianxun/website/m2.yaochufa.com/public/;
+    index       index.php index.html index.htm;
 
-    # redirect server error pages to the static page /50x.html 
-    # 
+    access_log  logs/m2.yaochufa.com-access.log;
+    error_log   logs/m2.yaochufa.com-error.log error;
 
-    rewrite "^/sitemap.xml" /uploads/sitemap/sitemap.xml last; 
-
-    error_page 500 502 503 504 /50x.html; 
-    location = /50x.html { 
-        root /home/qianxun/website/m2.yaochufa.com/public; 
-    } 
-    location ~ \.(png|jpg)$ { 
-        error_page 404 /home/qianxun/website/m2.yaochufa.com/public/public/images/404.jpg; 
-    } 
-    location / { 
-        if (!-e $request_filename){ 
-            rewrite ^/(.*) /index.php last; 
-        } 
+    location / {
+        try_files $uri $uri/ /index.php?_url=$uri&$args;
     }
-    location ~ \.php$ { 
-        fastcgi_pass 127.0.0.1:9000; 
-        #fastcgi_pass php54_backend; 
-        fastcgi_index index.php; 
-        include fastcgi_params; 
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name; 
-    } 
 
+    location ~ \.php {
+        # try_files   $uri =404;
+
+        fastcgi_pass  127.0.0.1:9000;
+        fastcgi_index /index.php;
+
+        include fastcgi_params;
+        fastcgi_split_path_info       ^(.+\.php)(/.+)$;
+        fastcgi_param PATH_INFO       $fastcgi_path_info;
+        fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+
+    location ~ /\.ht {
+        deny all;
+    }
 
 }
