--- a/nginx/vhosts/ycf_m2.conf
+++ b/nginx/vhosts/ycf_m2.conf
@@ -1,6 +1,6 @@
 server {
     listen      80;
-    server_name  m2test.yaochufa.com;
+    server_name  m2apitest.yaochufa.com;
     root        /home/qianxun/website/m2.yaochufa.com/public/;
     index       index.php index.html index.htm;
 
@@ -27,5 +27,23 @@ server {
     location ~ /\.ht {
         deny all;
     }
-
+}
+server {
+        listen       80;
+        server_name  m2test.yaochufa.com;
+        #charset utf-8;
+        access_log  logs/m2.yaochufa.com-access.log;
+        error_log   logs/m2.yaochufa.com-error.log error;
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Origin' 'http://m2apitest.yaochufa.com';
+        add_header 'Access-Control-Expose-Headers' 'X-Pagination-Current-Page';
+        root   /home/qianxun/website/m2.yaochufa.com/public/html;
+        index  index.html index.htm;
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /data/www;
+        }
+        location ~ ^(.*)\/\.(svn|csv|git)\/ {
+            deny all;
+        }
 }
