--- a/nginx/vhosts/ycf_trade.conf
+++ b/nginx/vhosts/ycf_trade.conf
@@ -1,6 +1,6 @@
 server { 
     listen 80; 
-    server_name mtest.yaochufa.com;
+    server_name tradetest.yaochufa.com;
     index index.html index.htm index.php; 
     root /home/qianxun/website/ycf_trade; 
     autoindex on; 
