--- a/nginx/vhosts/localwechat.tudouyu.conf
+++ b/nginx/vhosts/localwechat.tudouyu.conf
@@ -5,13 +5,14 @@ server {
 
     #charset koi8-r;
 
-    access_log  logs/wechat.tudouyu-access.log;
-    error_log   logs/wechat.tudouyu-error.log error;
+    access_log  logs/localwechat.tudouyu-access.log;
+    error_log   logs/localwechat.tudouyu-error.log error;
 
     location / {
+        index  index.php index.html index.htm;
         if (!-e $request_filename){
             proxy_pass http://127.0.0.1:9501;
-        }
+        } 
     }
 
     #error_page  404              /404.html;
