--- a/nginx/vhosts/localwechat.tudouyu.conf
+++ b/nginx/vhosts/localwechat.tudouyu.conf
@@ -9,10 +9,14 @@ server {
     error_log   logs/localwechat.tudouyu-error.log error;
 
     location / {
-        index  index.php index.html index.htm;
+        index index.html;
         if (!-e $request_filename){
             proxy_pass http://127.0.0.1:9501;
-        } 
+        }
+    }
+
+    location /index.html {
+         proxy_pass http://127.0.0.1:9501/;
     }
 
     #error_page  404              /404.html;
