--- a/nginx/vhosts/wechat.tudouyu.conf
+++ b/nginx/vhosts/wechat.tudouyu.conf
@@ -9,9 +9,14 @@ server {
     error_log   logs/wechat.tudouyu-error.log error;
 
     location / {
+        index index.html;
         if (!-e $request_filename){
             proxy_pass http://127.0.0.1:9501;
         }
+    }
+
+    location /index.html {
+         proxy_pass http://127.0.0.1:9501/;
     }
 
     #error_page  404              /404.html;
