--- a/nginx/vhosts/suofeiya_wxmini.conf
+++ b/nginx/vhosts/suofeiya_wxmini.conf
@@ -12,6 +12,13 @@ server {
 
     location / {
         index  index.php index.html index.htm;
+        if (!-e $request_filename) {
+            #一级目录
+            rewrite ^/(.*)$ /index.php/$1 last;
+            #二级目录
+            #rewrite ^/admin/(.*)$ /admin/index.php/$1 last;
+            #rewrite ^/api/(.*)$ /api/index.php/$1 last;
+        }
     }
 
     #error_page  404              /404.html;
@@ -31,11 +38,18 @@ server {
 
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
-    location ~ \.php$ {
+    location ~ \.php(/|$) {
         fastcgi_pass   127.0.0.1:9000;
         fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-        include        fastcgi_params;
+        include        fastcgi.conf;
+        set $fastcgi_script_name2 $fastcgi_script_name;
+        if ($fastcgi_script_name ~ "^(.+\.php)(/.+)$") {
+            set $fastcgi_script_name2 $1;
+            set $path_info $2;
+        }
+        fastcgi_param   PATH_INFO $path_info;
+        fastcgi_param   SCRIPT_FILENAME   $document_root$fastcgi_script_name2;
+        fastcgi_param   SCRIPT_NAME   $fastcgi_script_name2;
     }
 
     # deny access to .htaccess files, if Apache's document root
